<resources>
    <string name="app_name">OnTrip</string>
    <string name="distance">Distância</string>
    <string name="total_of_km">Total de Km</string>
    <string name="price">Preço</string>
    <string name="price_for_L">Preço por Litro</string>
    <string name="autonomy">Autonômia</string>
    <string name="Km_for_L">Km por litro</string>
    <string name="total_value">Seu gasto total será de:</string>
    <string name="value_real">R$ 0</string>
    <string name="calculate">Calcular</string>


</resources>